Create & Style the sidebar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="script.js" defer ></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="side">
+            <img src="./bg-image.jpg" alt="Background image with lots of money">
+            <p>Photo by <a href="https://unsplash.com/fr/@omilaev">Igor Omilaev</a> on <a href="https://unsplash.com/fr/photos/une-pile-dargent-posee-sur-une-table-M7iMdnG4R_g">Unsplash</a></p>
+            <div id="logo">
+                <img src="./odin-lined.png" alt="Odin Logo">
+                <span id="odin">ODIN</span>
+            </div>
+        </div>
+        <div id="form">
+            <form id="signup-form" action="">
+                <input type="text">
+            </form>
+        </div>
+    </div>
 </body>
 </html>
